<resources>
    <string name="app_name">나만의 냉장고</string>
    <string name="nav_header_title">나만의 냉장고</string>
    <string name="nav_header_subtitle">보다 효율적인 식재료 소비를 위해</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">세팅</string>

    <string name="menu_home">홈</string>
    <string name="menu_recipe">레시피</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_barcode">바코드</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="isRequired">*</string>
    <string name="RequiredMsg">* 은 필수 입력 항목</string>
    <string name="RequiredErrorMsg">필수 입력 항목입니다.</string>

    <string name="productName">상품명</string>
    <string name="dayCount">유통기한</string>
    <string name="productDescription">식품유형</string>

    <string name="productNameHint">상품명 입력</string>
    <string name="dayCountHint">00-00-00</string>
    <string name="productDescriptionHint">식품유형 입력</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search recipes</string>
</resources>