<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ingredient.IngredientInsertFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/RequiredMsg"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edge_light"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/productName"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/igdNameEdit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:ems="10"
                            android:hint="@string/productNameHint"
                            android:inputType="text" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edge_light"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="수량"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/igdQuantityEdit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:ems="10"
                            android:hint="수량 입력"
                            android:inputType="text" />

                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edge_light"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/dayCount"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/igdExpirationDateEdit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:ems="10"
                            android:hint="유통기한 입력"
                            android:inputType="datetime|date" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:gravity="center"
                            android:text="@string/isRequired"
                            android:textColor="@color/red"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/igdDayCountRequiredErrorMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/RequiredErrorMsg"
                        android:textColor="@color/red"
                        android:textSize="10sp"
                        android:visibility="gone" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edge_light"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="구매날짜"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/igdDateEdit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:ems="10"
                            android:hint="@string/dayCountHint"
                            android:inputType="datetime|date" />

                        <Button
                            android:id="@+id/igdCalendarBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="날짜" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:gravity="center"
                            android:text="@string/isRequired"
                            android:textColor="@color/red"
                            android:visibility="gone" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/igdDateRequiredErrorMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/RequiredErrorMsg"
                        android:textColor="@color/red"
                        android:textSize="10sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/igdDateRequiredErrorMsg2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="00-00-00 형식으로 입력해주세요."
                        android:textColor="@color/red"
                        android:textSize="10sp"
                        android:visibility="gone" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edge_light"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/productDescription"
                            android:textSize="16sp" />

                        <Spinner
                            android:id="@+id/igdTypeSpinner"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:gravity="center"
                            android:text="@string/isRequired"
                            android:textColor="@color/red"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/igdDescriptionRequiredErrorMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/RequiredErrorMsg"
                        android:textColor="@color/red"
                        android:textSize="10sp"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/bc_editBarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ems="10"
                android:hint="바코드 직접 입력"
                android:inputType="text" />

            <Button
                android:id="@+id/bc_editBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="5dp"
                android:text="입력 확인" />

            <Button
                android:id="@+id/bc_cameraBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="5dp"
                android:text="바코드 촬영"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/igdAddBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:text="추가" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>